--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src/**/*.js",
+    "lintfix": "eslint src/**/*.js --fix",
     "dev": "nodemon -L src/index.js",
     "start": "node src/index.js"
   },
@@ -16,6 +18,10 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2"
   }
 }
