--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "server-scaffold",
+  "name": "rankfication-server",
   "version": "1.0.0",
-  "description": "Simple ExpressJS + Nodemon server scaffolding",
+  "description": "Gamification app for increasing interaction between students and teachers based on homeworks.",
   "license": "MIT",
   "author": {
     "name": "Rodrigo Mesquita",
     "email": "rodrigoriome@gmail.com"
   },
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "eslint src/**/*.js",
     "lintfix": "eslint src/**/*.js --fix",
