--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "faker": "^4.1.0",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2"
